[gd_scene load_steps=9 format=3 uid="uid://xd6gb0dp1t4s"]

[ext_resource type="Script" path="res://systems/ui/main_menu.gd" id="1_ap4ji"]
[ext_resource type="PackedScene" uid="uid://bdkhck4lxvdx5" path="res://systems/dungeon_exploration/maps/generated_node_map.tscn" id="2_dpfka"]
[ext_resource type="Texture2D" uid="uid://c3q8ba7jcbwff" path="res://assets/sprites/cards/fool.png" id="2_g1vqn"]
[ext_resource type="PackedScene" uid="uid://bxifydx1hdpwf" path="res://systems/tutorial/tutorial.tscn" id="3_h1357"]
[ext_resource type="Texture2D" uid="uid://h0448sn65e2l" path="res://assets/sprites/cards/death.png" id="3_prrvv"]
[ext_resource type="PackedScene" uid="uid://cnsoofya6tv7v" path="res://systems/ui/menus/options_menu.tscn" id="4_g2abk"]
[ext_resource type="Script" path="res://systems/ui/visible_for_feature.gd" id="6_kuo4c"]
[ext_resource type="PackedScene" path="res://utils/anti_pause_node.tscn" id="7_ynsi7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ap4ji")
node_map_scene = ExtResource("2_dpfka")
tutorial_scene = ExtResource("3_h1357")
options_scene = ExtResource("4_g2abk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.709804, 0.584314, 0.545098, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 82
text = "Ball man"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 131.0
offset_top = -254.0
offset_right = 328.0
offset_bottom = -181.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Seed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SeedInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.5
offset_top = -253.0
offset_right = 762.5
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42

[node name="Fool" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
grow_vertical = 2
texture = ExtResource("2_g1vqn")

[node name="Death" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = -150.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_prrvv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
grow_horizontal = 2
theme_override_constants/separation = 24
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Play!"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Â¡Tutorial!"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "quit the game :)"

[node name="HiddenInBrowser" type="Node" parent="VBoxContainer/QuitButton"]
script = ExtResource("6_kuo4c")
show_or_hide = 0

[node name="AntiPauseNode" parent="." instance=ExtResource("7_ynsi7")]

[connection signal="text_changed" from="SeedInput" to="." method="_on_seed_input_text_changed"]
[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_button_down"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
